Fix scrollarea offsetScrollbars prop not working

--- a/src/mantine-code-highlight/src/CodeHighlight.module.css
+++ b/src/mantine-code-highlight/src/CodeHighlight.module.css
@@ -19,6 +19,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  margin-bottom: rem(5px);
 }
 
 .copy {
